--- a/src/index.html
+++ b/src/index.html
@@ -54,11 +54,11 @@
     </header>
 
     <main class="container">
-      <section class="home">
+      <section id="home" class="home">
         <h1 class="home__title">
           Building Reliable and Scalable Web Solutions.
         </h1>
-        <h4>Tamaki Akita, Full stack Engineer</h4>
+        <h4>Tamaki Akita, Software Engineer</h4>
         <div>
           <img
             src="./../images/selfphoto.jpg"
@@ -70,30 +70,37 @@
           <a href="mailto:tamaki.akita.jp@example.com"
             ><i class="fa-solid fa-envelope"></i
           ></a>
-          <a href="https://github.com/tmk-a" target="_blank"
+        <a href="https://github.com/tmk-a" target="_blank"
             ><i class="fa-brands fa-github"></i
           ></a>
-          <a href="https://www.linkedin.com/in/tamaki-akita/" target="_blank"
+        <a href="https://www.linkedin.com/in/tamaki-akita/" target="_blank"
             ><i class="fa-brands fa-linkedin"></i
           ></a>
         </div>
       </section>
-      <section class="about">
+      <section id="about" class="about">
         <h3 class="about__title">About Me</h3>
         <p class="about__text">
-          I am a former System Engineer with four years of experience in
-          software development. At Fujisoft, I worked on various projects,
-          including insurance management systems, government databases, and
-          digital transformation initiatives. My responsibilities ranged from
-          front-end and back-end development to project management and mentoring
-          junior engineers. <br />
-          Currently, I am participating in a Web Development co-op program in
-          Canada, where I am enhancing my skills through hands-on learning. I am
-          particularly interested in front-end development and database
-          management, building on my previous work experience. <br />
-          With a strong background in software engineering and a passion for
-          continuous learning, I am eager to contribute to innovative web
-          solutions.
+          I am a Software Engineer with a background in System Engineering.<br />
+          With four years of experience as a System Engineer, I worked on system
+          design, backend development, and software solutions for business
+          applications. During this time, I gained a deep understanding of
+          system architecture and data processing.<br />
+          <br />
+          Now, I am expanding my skills as a Software Engineer, focusing on
+          full-stack development. I enjoy improving systems, optimizing
+          workflows, and making processes more efficient.<br />
+          <br />
+          My strengths include:<br />
+          ☑️ Full-stack development – Experience in frontend, backend, and
+          database systems<br />
+          ☑️ Automation & data processing – Skilled in SQL, PowerShell, and
+          VBA<br />
+          ☑️ Team collaboration – Worked closely with engineers and supported
+          junior team members<br />
+          <br />
+          I am always learning and improving. My goal is to create reliable and
+          scalable solutions that enhance efficiency and user experience.
         </p>
       </section>
       <section id="skills" class="skills">
@@ -103,7 +110,7 @@
             <h4>Frontend</h4>
             <ul class="skills__middle-categories">
               <li>
-                <h5>Languages & Technologies</h5>
+                <h5>Languages</h5>
                 <ul class="skills__small-category">
                   <li class="skills__item-container">
                     <i class="fa-brands fa-html5"></i>
@@ -133,19 +140,19 @@
                 </ul>
               </li>
               <li>
-                <h5>Tools & Methodologies</h5>
+                <h5>Tools</h5>
                 <ul class="skills__others">
                   <li class="skills__others-item">
                     <i class="fa-solid fa-pen-to-square"></i>
-                    <p>Responsive web design principles</p>
+                    <p>Responsive Design</p>
                   </li>
                   <li class="skills__others-item">
                     <i class="fa-solid fa-pen-to-square"></i>
-                    <p>browser developer tools</p>
+                    <p>Dev Tools</p>
                   </li>
                   <li class="skills__others-item">
                     <i class="fa-solid fa-pen-to-square"></i>
-                    <p>debugging and testing techniques</p>
+                    <p>Debugging</p>
                   </li>
                 </ul>
               </li>
@@ -181,11 +188,11 @@
                 </ul>
               </li>
               <li>
-                <h5>Tools & Methodologies</h5>
+                <h5>Tools</h5>
                 <ul class="skills__others">
                   <li class="skills__others-item">
                     <i class="fa-solid fa-pen-to-square"></i>
-                    <p>Full lifecycle development</p>
+                    <p>Full Lifecycle Development</p>
                   </li>
                   <li class="skills__others-item">
                     <i class="fa-solid fa-pen-to-square"></i>
@@ -199,7 +206,7 @@
             <h4>Others</h4>
             <ul class="skills__middle-categories">
               <li>
-                <h5>Version Control & Development Tools</h5>
+                <h5>Version Control</h5>
                 <ul class="skills__small-category">
                   <li class="skills__item-container">
                     <i class="fa-brands fa-git-alt"></i>
@@ -208,6 +215,10 @@
                   <li class="skills__item-container">
                     <i class="fa-solid fa-arrows-spin"></i>
                     <p class="skills__item-name">Agile</p>
+                  </li>
+                  <li class="skills__item-container">
+                    <i class="fa-solid fa-water"></i></i>
+                    <p class="skills__item-name">Waterfall</p>
                   </li>
                 </ul>
               </li>
@@ -237,11 +248,11 @@
                       alt="office365-icon"
                       class="skills__item-image"
                     ></image>
-                    <p class="skills__item-name">office365</p>
+                    <p class="skills__item-name">Office 365</p>
                   </li>
                   <li class="skills__item-container">
                     <i class="fa-solid fa-gears"></i>
-                    <p class="skills__item-name">trouble<br />shooting</p>
+                    <p class="skills__item-name">Trouble<br />shooting</p>
                   </li>
                 </ul>
               </li>
@@ -249,30 +260,28 @@
           </li>
         </ul>
       </section>
-      <section class="history">
+      <section id="history" class="history">
         <h3 class="history__title">History</h3>
         <ul>
           <li>
             <h4 class="history__date">2024/10 ~ Present</h4>
             <div class="history__contents">
-              <h4>Student | FUJISOFT</h4>
+              <h4>Student | Cornerstone International  Community College of Canada </h4>
               <ul class="history__contents-list">
-                <li>learn Modern technology</li>
+                <li>expanding my skills as a Software Engineer</li>
               </ul>
             </div>
           </li>
           <li>
             <h4 class="history__date">2024/3 ~ 2024/8</h4>
             <div class="history__contents">
-              <h4>Fullstack Engineer | FUJISOFT</h4>
+              <h4>Software Engineer | FUJISOFT</h4>
               <ul class="history__contents-list">
                 <li>
-                  Used low-code tools to develop major portal functionalities
-                  for securely analyzing anonymized medical data.
+                  Developed key portal functions for secure analysis of anonymized medical data.
                 </li>
                 <li>
-                  Successfully managed large-scale updates involving multiple
-                  data sources, delivering results within strict deadlines.
+                  Delivered large-scale updates with strict deadlines across multiple data sources.
                 </li>
               </ul>
             </div>
@@ -283,13 +292,10 @@
               <h4>Data Processing Engineer| FUJISOFT</h4>
               <ul class="history__contents-list">
                 <li>
-                  Created tools to integrate learner IDs across multiple
-                  systems, delivering a critical solution on schedule while
-                  mastering a new programming language.
+                  Integrated learner IDs across multiple systems, delivering a critical cross-platform solution.
                 </li>
                 <li>
-                  Conducted AI validation tests to improve data accuracy,
-                  analyzed results, and presented findings in detailed reports.
+                  Conducted validation tests to improve data accuracy and presented findings in reports.
                 </li>
               </ul>
             </div>
@@ -300,20 +306,13 @@
               <h4>Frontend Engineer | FUJISOFT</h4>
               <ul class="history__contents-list">
                 <li>
-                  Developed the "Education DX Service Map," enabling users
-                  (educators, students, and parents) to search for educational
-                  services from private companies. Enhanced front-end usability
-                  with responsive design and user-centered improvements using
-                  React.
+                  Enhanced usability and responsiveness for an education service platform using React.
                 </li>
                 <li>
-                  Developed front-end components for the system, mastering a new
-                  programming language and contributing to quality deliverables
-                  within a short timeframe.
+                  Developed front-end components while quickly mastering a new programming language.
                 </li>
                 <li>
-                  Proactively assisted team members with bug fixes and
-                  specification changes, enhancing overall project efficiency.
+                  Supported team members with bug fixes and specification changes.
                 </li>
               </ul>
             </div>
@@ -324,13 +323,10 @@
               <h4>Team leader | FUJISOFT</h4>
               <ul class="history__contents-list">
                 <li>
-                  Delivered additional front-end functionality as team lead,
-                  meeting tight deadlines and ensuring high quality.
+                  Led additional front-end development as a 5-member team lead, ensuring timely and high-quality delivery.
                 </li>
                 <li>
-                  Directed a 5 member team to create test specifications for a
-                  vehicle recall information management system, tracking
-                  progress and ensuring seamless execution.
+                  Managed a 5-member team to test a vehicle recall information system, improving tracking accuracy.
                 </li>
               </ul>
             </div>
@@ -341,12 +337,10 @@
               <h4>PMO | FUJISOFT</h4>
               <ul class="history__contents-list">
                 <li>
-                  Played a pivotal PMO role in an 8 member team, ensuring the
-                  system's timely and successful release.
+                  Supported project management in an 8-member team, ensuring smooth system release.
                 </li>
                 <li>
-                  Spearheaded team management activities, including task
-                  delegation, progress tracking, and mentoring junior engineers.
+                  Coordinated task delegation, progress tracking, and communication among engineers.
                 </li>
               </ul>
             </div>
@@ -354,17 +348,13 @@
           <li>
             <h4 class="history__date">2020/10 ~ 2023/3</h4>
             <div class="history__contents">
-              <h4>Fullstack Engineer | FUJISOFT</h4>
+              <h4>Software Engineer | FUJISOFT</h4>
               <ul class="history__contents-list">
                 <li>
-                  Led system design, front-end/back-end development, and testing
-                  (unit, integration, and system) for a national health
-                  insurance member management system, serving over 98,000
-                  members.
+                  Developed and tested front-end and back-end features for a national health insurance system. (98,000+ members).
                 </li>
                 <li>
-                  Authored comprehensive design documentation and created
-                  detailed specifications for system-generated reports.
+                  Created detailed system documentation and defined report specifications.
                 </li>
               </ul>
             </div>
@@ -372,13 +362,12 @@
           <li>
             <h4 class="history__date">2020/10 ~ 2023/3</h4>
             <div class="history__contents">
-              <h4>Student | Meiji university</h4>
+              <h4>Student | Meiji University</h4>
               <ul class="history__contents-list">
                 <li>Studied Creative Writing and Japanese Literature.</li>
                 <li>Received a prize for a book review.</li>
                 <li>
-                  Awarded a merit-based scholarship in my third year as one of
-                  the top-performing students in my faculty.
+                  Recognized as one of the top-performing students in my faculty in my third year.
                 </li>
               </ul>
             </div>
@@ -406,7 +395,7 @@
           </li>
         </ul>
       </section>
-      <section class="project">
+      <section id="project" class="project">
         <h3 class="project__title">Project</h3>
         <ul>
           <li>
@@ -427,51 +416,55 @@
           </li>
         </ul>
       </section>
-      <section class="contact">
-        <h2 class="contact__title">Let’s chat together!</h2>
-        <address class="contact__address">
-          <a href="mailto:tamaki.akita.jp@example.com"
-            ><i class="fa-solid fa-envelope"></i
-          ></a>
-          <a href="https://github.com/tmk-a" target="_blank"
-            ><i class="fa-brands fa-github"></i
-          ></a>
-          <a href="https://www.linkedin.com/in/tamaki-akita/" target="_blank"
-            ><i class="fa-brands fa-linkedin"></i
-          ></a>
-        </address>
+      <section id="contact" class="contact">
+        <div class="contact__container">
+          <h2 class="contact__title">Let’s chat together!</h2>
+          <address class="contact__address">
+            <a href="mailto:tamaki.akita.jp@example.com"
+              ><i class="fa-solid fa-envelope"></i
+            ></a>
+            <a href="https://github.com/tmk-a" target="_blank"
+              ><i class="fa-brands fa-github"></i
+            ></a>
+            <a href="https://www.linkedin.com/in/tamaki-akita/" target="_blank"
+              ><i class="fa-brands fa-linkedin"></i
+            ></a>
+          </address>
+        </div>
       </section>
     </main>
     <footer class="footer">
-      <nav class="footer__nav">
-        <ul class="footer__items">
-          <div class="footer__items">
-            <li>
-              <a href="#home">HOME</a>
-            </li>
-            <li>
-              <a href="#about">ABOUT</a>
-            </li>
-          </div>
-          <div class="footer__items">
-            <li>
-              <a href="#skills">SKILLS</a>
-            </li>
-            <li>
-              <a href="#history">HISTORY</a>
-            </li>
-          </div>
-          <div class="footer__items">
-            <li>
-              <a href="#project">PROJECT</a>
-            </li>
-            <li>
-              <a href="#contact">CONTACT</a>
-            </li>
-          </div>
-        </ul>
-      </nav>
-      <small>copyright notice:xxxxxxxxx</small>
+      <div class="footer__container">
+        <nav class="footer__nav">
+          <ul class="footer__items">
+            <div class="footer__items">
+              <li>
+                <a href="#home">HOME</a>
+              </li>
+              <li>
+                <a href="#about">ABOUT</a>
+              </li>
+            </div>
+            <div class="footer__items">
+              <li>
+                <a href="#skills">SKILLS</a>
+              </li>
+              <li>
+                <a href="#history">HISTORY</a>
+              </li>
+            </div>
+            <div class="footer__items">
+              <li>
+                <a href="#project">PROJECT</a>
+              </li>
+              <li>
+                <a href="#contact">CONTACT</a>
+              </li>
+            </div>
+          </ul>
+        </nav>
+        <small>copyright notice:xxxxxxxxx</small>
+      </div>
     </footer>
   </body>
 </html>
