--- a/src/index.html
+++ b/src/index.html
@@ -66,7 +66,7 @@
             class="home__image"
           />
         </div>
-        <div class="home__contact">
+        <address class="home__contact">
           <a href="mailto:tamaki.akita.jp@example.com"
             ><i class="fa-solid fa-envelope"></i
           ></a>
@@ -76,7 +76,7 @@
         <a href="https://www.linkedin.com/in/tamaki-akita/" target="_blank"
             ><i class="fa-brands fa-linkedin"></i
           ></a>
-        </div>
+        </address>
       </section>
       <section id="about" class="about">
         <h3 class="about__title">About Me</h3>
