--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
           </ul>
         </nav>
         <nav>
-          <ul class="menu">
+          <ul class="hamburger-menu">
             <li>
               <a class="menu__item" href="#home">HOME</a>
             </li>
@@ -71,16 +71,14 @@
             </li>
           </ul>
         </nav>
-        <div class="header__hambergar">
-          <button class="button__hamburger">
-            <div class="menu__menuIcon">
-              <i class="fa-solid fa-bars"></i>
-            </div>
-            <div class="menu__closeIcon">
-              <i class="fa-solid fa-xmark"></i>
-            </div>
-          </button>
-        </div>
+        <button class="button__hamburger">
+          <div class="hamburger-menu__menuIcon">
+            <i class="fa-solid fa-bars"></i>
+          </div>
+          <div class="hamburger-menu__closeIcon">
+            <i class="fa-solid fa-xmark"></i>
+          </div>
+        </button>
       </div>
     </header>
 
