Add contact to hamburgar-menu

--- a/src/index.html
+++ b/src/index.html
@@ -49,28 +49,46 @@
             </li>
           </ul>
         </nav>
-        <nav>
-          <ul class="hamburger-menu">
-            <li>
-              <a class="menu__item" href="#home">HOME</a>
-            </li>
-            <li>
-              <a class="menu__item" href="#about">ABOUT</a>
-            </li>
-            <li>
-              <a class="menu__item" href="#skills">SKILLS</a>
-            </li>
-            <li>
-              <a class="menu__item" href="#history">HISTORY</a>
-            </li>
-            <li>
-              <a class="menu__item" href="#project">PROJECT</a>
-            </li>
-            <li>
-              <a class="menu__item" href="#contact">CONTACT</a>
-            </li>
-          </ul>
-        </nav>
+        <div class="hamburger-menu">
+          <nav>
+            <ul class="hamburger-menu__section">
+              <li>
+                <a class="menu__item" href="#home">HOME</a>
+              </li>
+              <li>
+                <a class="menu__item" href="#about">ABOUT</a>
+              </li>
+              <li>
+                <a class="menu__item" href="#skills">SKILLS</a>
+              </li>
+              <li>
+                <a class="menu__item" href="#history">HISTORY</a>
+              </li>
+              <li>
+                <a class="menu__item" href="#project">PROJECT</a>
+              </li>
+              <li>
+                <a class="menu__item menu__contact" href="#contact">CONTACT</a>
+              </li>
+            </ul>
+            <address class="hamburger-menu__contact">
+              <div class="hamburger-menu__icons" >
+                <a href="mailto:tamaki.akita.jp@example.com"
+                  ><i class="fa-solid fa-envelope"></i
+                ></a>
+                <a href="https://github.com/tmk-a" target="_blank"
+                  ><i class="fa-brands fa-github"></i
+                ></a>
+                <a href="https://www.linkedin.com/in/tamaki-akita/" target="_blank"
+                  ><i class="fa-brands fa-linkedin"></i
+                ></a>
+              </div>
+                <a href="../docs/Tamaki Akita - Resume.pdf" target="_blank"
+                  >Resume<i class="fa-solid fa-arrow-up-right-from-square"></i
+                ></a>
+            </address>
+          </nav>
+        </div>
         <button class="button__hamburger">
           <div class="hamburger-menu__menuIcon">
             <i class="fa-solid fa-bars"></i>
@@ -99,10 +117,10 @@
           <a href="mailto:tamaki.akita.jp@example.com"
             ><i class="fa-solid fa-envelope"></i
           ></a>
-        <a href="https://github.com/tmk-a" target="_blank"
+          <a href="https://github.com/tmk-a" target="_blank"
             ><i class="fa-brands fa-github"></i
           ></a>
-        <a href="https://www.linkedin.com/in/tamaki-akita/" target="_blank"
+          <a href="https://www.linkedin.com/in/tamaki-akita/" target="_blank"
             ><i class="fa-brands fa-linkedin"></i
           ></a>
         </address>
@@ -459,6 +477,9 @@
               ><i class="fa-brands fa-linkedin"></i
             ></a>
           </address>
+          <a href="../docs/Tamaki Akita - Resume.pdf" target="_blank"
+                >Resume<i class="fa-solid fa-arrow-up-right-from-square"></i
+          ></a>
         </div>
       </section>
     </main>
