chore: Move index.html to public folder

--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,9 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./../images/letter-t.png"
+      href="/src/images/letter-t.png"
     />
-    <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" href="/src/css/index.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -20,7 +20,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     />
-    <script src="./script/index.js" async defer></script>
+    <script src="/src/script/index.js" async defer></script>
     <script src="https://unpkg.com/scrollreveal@4"></script>
     <title>Portfolio</title>
   </head>
@@ -83,7 +83,7 @@
                   ><i class="fa-brands fa-linkedin"></i
                 ></a>
               </div>
-                <a href="../docs/Tamaki Akita - Resume.pdf" target="_blank"
+                <a href="/docs/Tamaki Akita - Resume.pdf" target="_blank"
                   >Resume<i class="fa-solid fa-arrow-up-right-from-square"></i
                 ></a>
             </address>
@@ -108,7 +108,7 @@
         <h4>Tamaki Akita, Software Engineer</h4>
         <div>
           <img
-            src="./../images/selfphoto.jpg"
+            src="/src/images/selfphoto.jpg"
             alt="tamaki"
             class="home__image"
           />
@@ -457,7 +457,7 @@
                 <p>2025/2</p>
               </div>
               <div class="project__image">
-                <img src="./../images/portfolio.png" alt="portfolio" />
+                <img src="/src/images/portfolio.png" alt="portfolio" />
               </div>
             </div>
           </li>
@@ -477,7 +477,7 @@
               ><i class="fa-brands fa-linkedin"></i
             ></a>
           </address>
-          <a href="../docs/Tamaki Akita - Resume.pdf" target="_blank"
+          <a href="/docs/Tamaki Akita - Resume.pdf" target="_blank"
                 >Resume<i class="fa-solid fa-arrow-up-right-from-square"></i
           ></a>
         </div>
