--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       sizes="32x32"
       href="/src/images/letter-t.png"
     />
-    <link rel="stylesheet" href="/src/css/index.css" />
+    <link rel="stylesheet" href="./index.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -20,7 +20,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     />
-    <script src="/src/script/index.js" async defer></script>
+    <script src="/index.js" async defer></script>
     <script src="https://unpkg.com/scrollreveal@4"></script>
     <title>Portfolio</title>
   </head>
