fix: delete async

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     />
-    <script src="../src/script/index.js" async defer></script>
+    <script src="../src/script/index.js" defer></script>
     <script src="https://unpkg.com/scrollreveal@4"></script>
     <title>Portfolio</title>
   </head>
